<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_recent_black_24dp"
            android:title="@string/category_recent" />
        <item
            android:id="@+id/nav_thoughts"
            android:icon="@drawable/ic_thoughts_black_24dp"
            android:title="@string/category_thoughts" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_tutorials_24dp"
            android:title="@string/category_tutorials" />
        <item
            android:id="@+id/nav_experiences"
            android:icon="@drawable/ic_experiences_black_24dp"
            android:title="@string/category_experiences" />
        <item
            android:id="@+id/nav_reviews"
            android:icon="@drawable/ic_reviews_black_24dp"
            android:title="@string/category_reviews" />
    </group>

</menu>
